feat: publish idl

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -12,7 +12,8 @@
     "deploy": "solana program deploy --url https://solana-mainnet-api.rpc-node.com --program-id target/deploy/nanodrop-keypair.json --keypair target/deploy/authority-keypair.json --max-len 1000000 target/deploy/nanodrop.so",
     "test": "anchor test --skip-build  --skip-deploy --skip-local-validator",
     "build:test": "anchor build -- --features \"test\"",
-    "deploy:test": "anchor deploy --provider.cluster https://solana-mainnet-api.rpc-node.com --program-keypair target/deploy/test-program-keypair.json --provider.wallet target/deploy/test-authority-keypair.json"
+    "deploy:test": "anchor deploy --provider.cluster https://solana-mainnet-api.rpc-node.com --program-keypair target/deploy/test-program-keypair.json --provider.wallet target/deploy/test-authority-keypair.json",
+    "publish": "anchor idl init nano4T4ujob2vtabhnoiSmHdq4gawScPTwwhF5HSwPJ -f target/idl/nanodrop.json --provider.cluster https://warmhearted-solemn-shard.solana-mainnet.discover.quiknode.pro/ba1621153f9558a7ef443c254761d8667036320f --provider.wallet target/deploy/authority-keypair.json"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.27.0"
