--- a/apps/nanodrop-files/package.json
+++ b/apps/nanodrop-files/package.json
@@ -12,13 +12,14 @@
   "license": "MIT",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230518.0",
+    "eslint-config-custom": "*",
     "tsconfig": "*",
     "typescript": "^4.9.4",
-    "wrangler": "^3.0.1",
-    "eslint-config-custom": "*"
+    "wrangler": "^3.0.1"
   },
   "dependencies": {
     "aws4fetch": "^1.0.17",
+    "itty-cors": "^0.3.6",
     "itty-router": "^2.6.1"
   }
 }
