feat: port landing page to vite

--- a/turbo.json
+++ b/turbo.json
@@ -1,10 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalEnv": [
-    "NEXT_PUBLIC_RPC_ENDPOINT",
-    "NEXT_PUBLIC_RPC_WSS_ENDPOINT",
-    "NEXT_PUBLIC_API_ORIGIN"
-  ],
+  "globalEnv": [],
   "globalDependencies": ["**/.env.*local"],
   "pipeline": {
     "build": {
