--- a/apps/web.bak/package.json
+++ b/apps/web.bak/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "web",
+  "name": "web.bak",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.27.0",
@@ -50,23 +48,13 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
-    "@rollup/plugin-inject": "^4.0.4",
     "@types/node": "^17.0.12",
     "@types/qs": "^6.9.7",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
     "@types/three": "^0.152.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
     "eslint-config-custom": "*",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "rollup-plugin-node-polyfills": "^0.2.1",
     "tsconfig": "*",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "typescript": "^4.5.3"
   }
 }
