--- a/apps/web/.env
+++ b/apps/web/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_ORIGIN=https://api.nanodrop.it
+VITE_RPC_ENDPOINT=https://api.mainnet-beta.solana.com
+VITE_API_ORIGIN=https://api.nanodrop.it
