--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,6 +43,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-router-dom": "^6.12.0",
     "sonner": "^0.3.5",
     "swr": "^2.1.5",
     "three": "^0.152.2",
