--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,6 +56,7 @@
     "@types/react-dom": "^18.0.7",
     "@types/three": "^0.152.0",
     "eslint-config-custom": "*",
+    "react-router-dom": "^6.12.0",
     "tsconfig": "*",
     "typescript": "^4.5.3"
   }
