--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,10 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalEnv": ["NEXT_PUBLIC_RPC_ENDPOINT", "NEXT_PUBLIC_API_ORIGIN"],
+  "globalEnv": [
+    "NEXT_PUBLIC_RPC_ENDPOINT",
+    "NEXT_PUBLIC_API_ORIGIN",
+    "NODE_ENV"
+  ],
   "globalDependencies": ["**/.env.*local"],
   "pipeline": {
     "build": {
