--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "wrangler pages deploy out/ --project-name=nanodrop-web"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.27.0",
@@ -58,6 +59,7 @@
     "eslint-config-custom": "*",
     "react-router-dom": "^6.12.0",
     "tsconfig": "*",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.3",
+    "wrangler": "^3.1.0"
   }
 }
