--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,14 +1,12 @@
 {
   "name": "@nanodrop/contracts",
   "version": "0.0.1",
-  "module": "dist/index.js",
-  "types": "dist/types.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
-    "build": "rollup --config",
-    "dev": "rollup --config --watch",
-    "build:contract": "anchor build",
+    "build": "anchor build",
     "deploy": "solana program deploy --url https://solana-mainnet-api.rpc-node.com --program-id target/deploy/nanodrop-keypair.json --keypair target/deploy/authority-keypair.json --max-len 1000000 target/deploy/nanodrop.so",
     "test": "anchor test --skip-build  --skip-deploy --skip-local-validator",
     "build:test": "anchor build -- --features \"test\"",
@@ -22,10 +20,6 @@
     "@metaplex-foundation/js": "^0.19.3",
     "@metaplex-foundation/mpl-bubblegum": "^0.6.2",
     "@metaplex-foundation/mpl-token-metadata": "^2.11.1",
-    "@rollup/plugin-commonjs": "^25.0.0",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-typescript": "^11.1.1",
     "@solana/spl-account-compression": "^0.1.8",
     "@solana/spl-token": "^0.3.7",
     "@solana/web3.js": "^1.76.0",
