--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "dayjs": "^1.11.7",
     "decimal.js": "^10.4.3",
     "formik": "^2.2.9",
+    "nanoid": "^4.0.2",
     "next": "^13.4.4",
     "qs": "^6.11.2",
     "react": "^18.2.0",
