--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,17 +19,23 @@
     "test:e2e": "echo 'No e2e tests implemented yet.'"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "0.26.0",
+    "@metaplex-foundation/mpl-bubblegum": "^0.7.0",
+    "@metaplex-foundation/mpl-token-metadata": "^2.12.0",
+    "@nanodrop/contracts": "*",
     "@nestjs/common": "10.0.3",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "10.0.3",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "10.0.0",
     "@nestjs/platform-express": "10.0.3",
+    "@solana/web3.js": "^1.77.3",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
     "mongoose": "7.3.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.1",
-    "rxjs": "7.8.1",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.14.0"
+    "rxjs": "7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "10.0.3",
@@ -42,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "5.60.0",
     "@typescript-eslint/parser": "5.60.0",
     "eslint": "8.42.0",
+    "eslint-config-custom": "*",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
     "jest": "29.5.0",
@@ -51,8 +58,7 @@
     "ts-loader": "9.4.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.1.3",
-    "eslint-config-custom": "*"
+    "typescript": "5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
