--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@nanodrop/contracts",
   "version": "0.0.1",
-  "main": "src/index.ts",
   "types": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
     "build": "anchor build",
+    "build:lib": "rollup --config",
+    "dev": "yarn run build:lib --watch",
     "deploy": "solana program deploy --url https://solana-mainnet-api.rpc-node.com --program-id target/deploy/nanodrop-keypair.json --keypair target/deploy/authority-keypair.json --max-len 1000000 target/deploy/nanodrop.so",
     "test": "anchor test --skip-build  --skip-deploy --skip-local-validator",
     "build:test": "anchor build -- --features \"test\"",
@@ -20,6 +22,8 @@
     "@metaplex-foundation/js": "^0.19.3",
     "@metaplex-foundation/mpl-bubblegum": "^0.6.2",
     "@metaplex-foundation/mpl-token-metadata": "^2.11.1",
+    "@rollup/plugin-commonjs": "^25.0.2",
+    "@rollup/plugin-typescript": "^8.5.0",
     "@solana/spl-account-compression": "^0.1.8",
     "@solana/spl-token": "^0.3.7",
     "@solana/web3.js": "^1.76.0",
@@ -35,7 +39,6 @@
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
     "rollup": "^2.79.0",
-    "rollup-plugin-dts": "^5.3.0",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "tsconfig": "*",
