feat: allow creation of drop

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/work-sans": "^4.5.14",
+    "@metaplex-foundation/js": "^0.19.4",
     "@metaplex-foundation/mpl-token-metadata": "^2.11.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.130",
@@ -32,7 +33,7 @@
     "@solana/wallet-adapter-react": "^0.15.32",
     "@solana/wallet-adapter-react-ui": "^0.9.31",
     "@solana/wallet-adapter-solflare": "^0.6.24",
-    "@solana/web3.js": "^1.76.0",
+    "@solana/web3.js": "^1.77.3",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
