--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,7 +35,8 @@
     "mongoose": "7.3.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.1",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "10.0.3",
