--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "10.0.0",
     "@nestjs/platform-express": "10.0.3",
+    "@solana/spl-account-compression": "^0.1.8",
     "@solana/web3.js": "^1.77.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
