--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,6 +39,7 @@
     "dayjs": "^1.11.7",
     "decimal.js": "^10.4.3",
     "formik": "^2.2.9",
+    "jose": "^4.14.4",
     "nanoid": "^4.0.2",
     "next": "^13.4.4",
     "qs": "^6.11.2",
