--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,6 +33,7 @@
     "@solana/web3.js": "^1.77.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "7.3.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.1",
@@ -45,6 +46,7 @@
     "@nestjs/testing": "10.0.3",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.1",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.60.0",
