--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "10.0.3",
     "@solana/spl-account-compression": "^0.1.8",
     "@solana/web3.js": "^1.77.3",
+    "bs58": "^5.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "jsonwebtoken": "^9.0.0",
@@ -43,6 +44,7 @@
     "@nestjs/cli": "10.0.3",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.3",
+    "@types/bs58": "^4.0.1",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.2",
     "@types/jsonwebtoken": "^9.0.2",
